# otus_basic_cpp

./: .gitignore  CMakeLists.txt  README.md  example.cpp  example.h  hello_world.cpp  move_me_out.cpp  move_me_out.h
02_lesson_build/homework/: CMakeLists.txt  hello_world.cpp
03_basic_syntax/: 01_1_cin_cout.cpp  01_2_cin_cout_using.cpp  01_3_cin_cout_namespace.cpp  03_type_ranges_float.cpp  04_arithm_operations.cpp  05_bool_logic.cpp  06_if.cpp  07_switch.cpp  08_while_do_loop.cpp  09_for_loop.cpp  10_file_io.cpp  CMakeLists.txt  xx_cast_int_float.cpp
04_functions/: 10_hanoi.cpp  1_pow.cpp  2_gcd_cin.cpp  3_args.cpp  4_gcd.cpp  7_minigrep.cpp  CMakeLists.txt
webinar-linkage-main/: CMakeLists.txt  README.md  compilation.asm  compilation.cpp  compilation.i  dynamic_library_usage.cpp  file_io.cpp  static_library_usage.cpp
webinar-linkage-main/dynamic_library/: CMakeLists.txt  calculation.cpp  calculation.h
webinar-linkage-main/static_library/: CMakeLists.txt  datetime.cpp  datetime.h
